==> nhlijiaming/Quadrotor/userLib/OLED.c <==
#include "OLED.h"
#define X_WIDTH 128
#define Y_WIDTH 64

void OLED_WrDat(unsigned char data)
{
	unsigned char i=8;
	//OLED_CS=0;;
	OLED_DS_H;
//	SysCtlDelay(SysCtlClockGet()/15000000);

	OLED_D0_L;
//	SysCtlDelay(SysCtlClockGet()/15000000);
	while(i--)
	{
		if(data&0x80){OLED_D1_H;}
		else{OLED_D1_L;}
		OLED_D0_H;
//		SysCtlDelay(SysCtlClockGet()/15000000);
		//asm("nop");
		OLED_D0_L;
		data<<=1;
	}
	//LCD_CS=1;
}

void OLED_WrCmd(unsigned char cmd)
{
	unsigned char i=8;

	//LCD_CS=0;;
	//  GPIOA_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(12));;;;;
	//  GPIOA_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(15));;;;;
	OLED_DS_L;
	OLED_D0_L;
	//asm("nop");
	while(i--)
	{
		if(cmd&0x80){OLED_D1_H;}
		else{OLED_D1_L;}
		OLED_D0_H;
//		SysCtlDelay(SysCtlClockGet()/15000000);
		OLED_D0_L;
		cmd<<=1;;;
	}
	//LCD_CS=1;
}

void OLED_Init(void)
{
	SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
	GPIOPinTypeGPIOOutput(GPIO_PORTD_BASE,GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_2|GPIO_PIN_3);
	GPIOPadConfigSet(GPIO_PORTD_BASE, GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_2|GPIO_PIN_3, GPIO_STRENGTH_2MA,GPIO_PIN_TYPE_STD);     //上拉输出
	OLED_D0_H;
	OLED_D1_H;
	OLED_DS_H;
	OLED_RST_H;

	OLED_RST_L;
	SysCtlDelay(SysCtlClockGet()/600);
	OLED_RST_H;

	OLED_WrCmd(0xae);//--turn off oled panel
	OLED_WrCmd(0x00);//---set low column address
	OLED_WrCmd(0x10);//---set high column address
	OLED_WrCmd(0x40);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_WrCmd(0x81);//--set contrast control register
	OLED_WrCmd(0xcf); // Set SEG Output Current Brightness
	OLED_WrCmd(0xa1);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
	OLED_WrCmd(0xc8);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
	OLED_WrCmd(0xa6);//--set normal display
	OLED_WrCmd(0xa8);//--set multiplex ratio(1 to 64)
	OLED_WrCmd(0x3f);//--1/64 duty
	OLED_WrCmd(0xd3);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_WrCmd(0x00);//-not offset
	OLED_WrCmd(0xd5);//--set display clock divide ratio/oscillator frequency
	OLED_WrCmd(0x80);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_WrCmd(0xd9);//--set pre-charge period
	OLED_WrCmd(0xf1);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_WrCmd(0xda);//--set com pins hardware configuration
	OLED_WrCmd(0x12);
	OLED_WrCmd(0xdb);//--set vcomh
	OLED_WrCmd(0x40);//Set VCOM Deselect Level
	OLED_WrCmd(0x20);//-Set Page Addressing Mode (0x00/0x01/0x02)
	OLED_WrCmd(0x02);//
	OLED_WrCmd(0x8d);//--set Charge Pump enable/disable
	OLED_WrCmd(0x14);//--set(0x10) disable
	OLED_WrCmd(0xa4);// Disable Entire Display On (0xa4/0xa5)
	OLED_WrCmd(0xa6);// Disable Inverse Display On (0xa6/a7)
	OLED_WrCmd(0xaf);//--turn on oled panel
	OLED_Fill(0x00);  //初始清屏
	OLED_Set_Pos(0,0);


	OLED_Clear();
}

void OLED_Rectangle(byte x1,byte y1,byte x2,byte y2,byte gif)
{
	byte n;

	OLED_Set_Pos(x1,y1>>3);
	for(n=x1;n<=x2;n++)
	{
		OLED_WrDat(0x01<<(y1%8));
		if(gif == 1) 	SysCtlDelay(SysCtlClockGet()/600);
	}
	OLED_Set_Pos(x1,y2>>3);
	for(n=x1;n<=x2;n++)
	{
		OLED_WrDat(0x01<<(y2%8));
		if(gif == 1) 	SysCtlDelay(SysCtlClockGet()/600);
	}

}
